✨ feat: Add separate configuration page

--- a/src/pages/popup/index.css
+++ b/src/pages/popup/index.css
@@ -24,7 +24,28 @@ html {
 }
 
 .body {
+    overflow: hidden;
+}
+
+[class*='-page'] {
+    height: 100px;
+    width: 280px;
+
     padding: 10px;
+}
+
+.main-page {
+}
+
+.config-page {
+    position: fixed;
+    top: 40px;
+    left: calc(300px + 300px);
+    transition: all 0.1s;
+}
+
+.active {
+    left: 0;
 }
 
 .option {
@@ -34,6 +55,24 @@ html {
     font-size: 1.2rem;
 }
 
+.config-action {
+    padding-top: 20px;
+    display: flex;
+    justify-content: space-around;
+}
+
+.config-action button {
+    height: 24px;
+    width: 100px;
+
+    border: none;
+}
+.action-cancle {
+    background-color: #D8D8D8;
+}
+.action-apply {
+    background-color: #03C75A;
+}
 
 .icon {
     display: flex;
